fix image size on mobile

--- a/client/src/styles/Home.scss
+++ b/client/src/styles/Home.scss
@@ -23,7 +23,6 @@
     margin: 0.8em;
     padding: 1em;
   }
-
 }
 
 .home-msg {
@@ -42,7 +41,6 @@
     font-family: $logo-font;
   }
 }
-
 
 /* CSS */
 .button {
@@ -85,10 +83,9 @@
   line-height: 13px;
 }
 
-
 .button:after {
   border: 1px solid black;
-  content: "";
+  content: '';
   position: absolute;
   bottom: -50%;
   left: 0;
@@ -119,9 +116,8 @@
   }
 
   .hero-container {
-
     img {
-      height: 40vh;
+      height: 30vh;
       width: 100%;
       object-fit: cover;
       // object-position: 10vw
@@ -140,12 +136,10 @@
       font-size: 1.5em;
     }
   }
-
 }
 
 @media only screen and (max-width: 400px) {
   input {
-    width: 200px
+    width: 200px;
   }
-
 }
